--- a/views/menu.hbs
+++ b/views/menu.hbs
@@ -253,7 +253,7 @@
     }
     function guestSearch() {
        if (isUserLoggedIn()) {
-        location.href = 'userprofile';
+        location.href = 'usersearch';
       } else {
         const guestDialog = document.getElementById('guest1');
         guestDialog.showModal();
