--- a/views/login.hbs
+++ b/views/login.hbs
@@ -190,7 +190,7 @@
       <button class="login" type="submit">Login</button>
     </form>
     <div class="footer">
-      <a href="register">Register</a> | <a href="forgot_password">Forgot Password?</a>
+      <a href="register">Register</a> | <a href="#">Forgot Password?</a>
     </div>
     <div class="footer">
       <a href="index" style="color: #006937;"><b>Back to Homepage</b></a>
